new comment added

--- a/jsStringMethods.html
+++ b/jsStringMethods.html
@@ -12,8 +12,9 @@
         let b = a.length; // this is lenght method
         document.writeln(b + "</br>");
         
-        b = a.toLowerCase()
+        b = a.toLowerCase() // this is Lowercash method all charactores are small in all string
         document.writeln(b);
+
         
     </script>
 
